miniextendr-macros/tests/ui/derive_into_list_unknown_field_attr.rs
//! Test: unknown #[into_list] field option.

use miniextendr_macros::IntoList;

#[derive(IntoList)]
struct Bad {
    #[into_list(typo)]
    x: f64,
}

fn main() {}
